--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>3.3.0.Final</version>
+            </dependency>
+            <dependency>
                 <groupId>com.chiralbehaviors.CoRE</groupId>
                 <artifactId>phantasm-at-rest</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
@@ -110,7 +115,7 @@
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.18.1-GA</version>
+                <version>3.19.0-GA</version>
             </dependency>
             <dependency>
                 <groupId>com.github.jsonld-java</groupId>
@@ -341,11 +346,6 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.eclipse.persistence</groupId>
-                <artifactId>javax.persistence</artifactId>
-                <version>2.0.0</version>
-            </dependency>
-            <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>1.9.5</version>
@@ -373,7 +373,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>5.1.3.Final</version>
+                <version>5.1.3.Final</version> 
             </dependency>
             <dependency>
                 <groupId>com.graphql-java</groupId>
@@ -644,7 +644,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>com.chiralbehaviors.CoRE</groupId>
                                         <artifactId>network-inference-generator</artifactId>
-                                        <versionRange>[2.0.0-SNAPSHOT,)</versionRange>
+                                        <versionRange>[${project.version},)</versionRange>
                                         <goals>
                                             <goal>generate</goal>
                                         </goals>
@@ -657,7 +657,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>org.hibernate.orm.tooling</groupId>
                                         <artifactId>hibernate-enhance-maven-plugin</artifactId>
-                                        <versionRange>[4.3.10.Final,)</versionRange>
+                                        <versionRange>[${hibernate.version},)</versionRange>
                                         <goals>
                                             <goal>enhance</goal>
                                         </goals>
@@ -689,5 +689,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles> 
 </project>
