--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -7,17 +7,16 @@ dba.url= jdbc:postgresql://${db.server}:${db.port}/${db.database}
 dba.username= ${db.login}
 dba.password= ${db.password} 
 
-hibernate.cache.use_second_level_cache=true
 hibernate.c3p0.max_size=20
 hibernate.c3p0.min_size=0
 hibernate.c3p0.timeout=5000
 hibernate.c3p0.max_statements=100
 hibernate.c3p0.acquire_increment=2
 
-#hibernate.show_sql=true
-#hibernate.format_sql=true
-#hibernate.cache.use_query_cache=true
-#hibernate.cache.provider_class = org.hibernate.cache.OSCacheProvider
-#hibernate.cache.use_structured_entries = true
-#hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
-
+#javax.persistence.sharedCache.mode = ALL
+#javax.persistence.cache.retrieveMode = USE
+#javax.persistence.CacheStoreMode = USE
+#hibernate.cache.use_second_level_cache = true
+#hibernate.cache.use_query_cache = true
+#hibernate.cache.provider_class = org.hibernate.testing.cache.CachingRegionFactory
+#hibernate.cache.region.factory_class=org.hibernate.testing.cache.CachingRegionFactory
