--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-testing</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>${hibernate.version}</version>
             </dependency>
@@ -353,7 +358,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>log4j-over-slf4j</artifactId>
-                <version>1.7.5</version>
+                <version>1.7.10</version>
             </dependency>
             <dependency>
                 <groupId>com.hellblazer</groupId>
@@ -373,7 +378,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>5.1.3.Final</version> 
+                <version>5.1.3.Final</version>
             </dependency>
             <dependency>
                 <groupId>com.graphql-java</groupId>
@@ -689,5 +694,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles> 
+    </profiles>
 </project>
