incremental workspace DSL version loading.
Version 1 is now considered initial version (was previously 0, but Ain
Soph).

Kernel workspace is now version 2, because Ain Soph Aur.  

Tested incremental DSL version loading of thing ontology.

--- a/kernel-phantasms/pom.xml
+++ b/kernel-phantasms/pom.xml
@@ -23,7 +23,7 @@
                         </goals>
                         <configuration>
                             <generator>
-                                <resource>/kernel.wsp</resource>
+                                <resource>/kernel.2.wsp</resource>
                                 <outputDirectory>${project.build.directory}/generated-sources/phantasm</outputDirectory>
                                 <packageName>com.chiralbehaviors.CoRE.kernel</packageName>
                                 <appendTypeToPackage>true</appendTypeToPackage>
