--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -136,7 +136,7 @@
                             <mainClass>com.chiralbehaviors.CoRE.kernel.Bootstrap</mainClass>
                             <arguments>
                                 <argument>${project.build.directory}/test-classes/jpa.properties</argument>
-                                <argument>src/main/kernel/kernel-workspace.json</argument>
+                                <argument>src/main/kernel/kernel-workspace.2.json</argument>
                             </arguments>
                         </configuration>
                     </plugin>
