--- a/phantasm-at-rest/src/test/resources/demo.yml
+++ b/phantasm-at-rest/src/test/resources/demo.yml
@@ -6,7 +6,11 @@ jpa:
         javax.persistence.jdbc.password: ${db.password}
         javax.persistence.jdbc.url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
         javax.persistence.jdbc.driver: org.postgresql.Driver
-        hibernate.cache.use_second_level_cache: true
+        hibernate.c3p0.max_size: 20
+        hibernate.c3p0.min_size: 10
+        hibernate.c3p0.timeout: 5000
+        hibernate.c3p0.max_statements: 100
+        hibernate.c3p0.acquire_increment: 2
         
 logging:
     level: INFO
