--- a/phantasm-at-rest/src/test/resources/jpa.properties
+++ b/phantasm-at-rest/src/test/resources/jpa.properties
@@ -2,6 +2,13 @@ javax.persistence.jdbc.user=${db.login}
 javax.persistence.jdbc.password=${db.password}
 javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
+
+hibernate.c3p0.max_size=20
+hibernate.c3p0.min_size=10
+hibernate.c3p0.timeout=5000
+hibernate.c3p0.max_statements=100
+hibernate.c3p0.acquire_increment=2
+
 #hibernate.cache.use_second_level_cache=true
 #hibernate.cache.use_query_cache=true
 #hibernate.cache.provider_class = org.hibernate.cache.EhCacheProvider
