--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>navi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>schema</artifactId>
                 <version>${project.version}</version>
             </dependency>
