add as source, not resource

--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -51,7 +51,7 @@
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>add-resource</id>
+                        <id>add-source</id>
                         <phase>generate-sources</phase>
                         <goals>
                             <goal>add-source</goal>
