Refactor phantasm generator back into animations.

--- a/phantasm-plugin/pom.xml
+++ b/phantasm-plugin/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>phantasm-generator</artifactId>
+            <artifactId>animations</artifactId>
         </dependency>
     </dependencies>
     <build>
