Fix graphql response. Integrate GraphiQL IDE.
Fuck yea.  We now have the beginnings of a workspace browser/ide

--- a/browser/src/test/resources/demo.yml
+++ b/browser/src/test/resources/demo.yml
@@ -13,3 +13,11 @@ logging:
     loggers:
         "org.hibernate": ERROR
         "org.glassfish": ERROR 
+
+server:
+  applicationConnectors:
+  - type: http 
+    port: 9000
+  adminConnectors:
+  - type: http
+    port: 9001
