enforce dependency convergency
once dropwizard enters the equation, however, dependencies will still
have to be checked manually, as drop wizard does not enforce its own
dependencies.

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -148,5 +148,16 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>enforce-convergence</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
