--- a/model/pom.xml
+++ b/model/pom.xml
@@ -199,4 +199,17 @@
                 </plugin> -->
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>enforce-convergence</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
