--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -86,19 +86,15 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>
-
+    </build> 
     <profiles>
         <profile>
-            <id>database.active</id>
+            <id>enforce-convergence</id>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skipTests>false</skipTests>
-                        </configuration>
+                        <artifactId>maven-enforcer-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
