Database lifecycle control under Liquibase managment.
Use tagging to manage the rollbacks.  Use rollbacks to uncreate the
roles and databases. Removed unused roles.

Schema is now free of references to db name.  Db name is paramaterized
from the ${db.login} value of the build.

--- a/pom.xml
+++ b/pom.xml
@@ -258,9 +258,9 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.groupId}</groupId>
+                <groupId>com.chiralbehaviors.CoRE</groupId>
                 <artifactId>network-inference-generator</artifactId>
-                <version>${project.version}</version>
+                <version>0.0.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
