--- a/drop-database/pom.xml
+++ b/drop-database/pom.xml
@@ -14,11 +14,18 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>schema</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <profiles>
         <profile>
+            <id>drop-db</id>
             <activation>
                 <property>
                     <name>drop</name>
@@ -27,52 +34,37 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>sql-maven-plugin</artifactId>
-                        <configuration>
-                            <driver>org.postgresql.Driver</driver>
-                            <url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
-                            <username>${dba.db.login}</username>
-                            <password>${dba.db.password}</password>
-                            <autocommit>true</autocommit>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.postgresql</groupId>
-                                <artifactId>postgresql</artifactId>
-                                <version>${postgresql.driver.version}</version>
-                            </dependency>
-                        </dependencies>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>drop</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>execute</goal>
-                                </goals>
+                                <phase>process-resources</phase>
                                 <configuration>
-                                    <srcFiles>
-                                        <srcFile>${project.build.outputDirectory}/drop-database.sql</srcFile>
-                                    </srcFiles>
+                                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                                    <driver>org.postgresql.Driver</driver>
+                                    <url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
+                                    <username>${dba.db.login}</username>
+                                    <password>${dba.db.password}</password>
+                                    <rollbackTag>initial-database-create-${db.login}</rollbackTag>
+                                    <contexts>${db.context}</contexts>
+                                    <changeLogFile>create-database.xml</changeLogFile>
+                                    <verbose>true</verbose>
                                 </configuration>
-                            </execution>
-                            <execution>
-                                <id>drop_roles</id>
-                                <phase>test</phase>
                                 <goals>
-                                    <goal>execute</goal>
+                                    <goal>rollback</goal>
                                 </goals>
-                                <configuration>
-                                    <onError>continue</onError>
-                                    <srcFiles>
-                                        <srcFile>${project.build.outputDirectory}/drop-roles.sql</srcFile>
-                                    </srcFiles>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile> 
     </profiles>
 </project>
