--- a/drop-database/pom.xml
+++ b/drop-database/pom.xml
@@ -65,6 +65,60 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile> 
+        </profile>
+
+        <profile>
+            <id>sudo-drop-me</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>sql-maven-plugin</artifactId>
+                        <configuration>
+                            <driver>org.postgresql.Driver</driver>
+                            <url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
+                            <username>${dba.db.login}</username>
+                            <password>${dba.db.password}</password>
+                            <autocommit>true</autocommit>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>${postgresql.driver.version}</version>
+                            </dependency>
+                        </dependencies>
+                        <executions>
+                            <execution>
+                                <id>drop</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <srcFiles>
+                                        <srcFile>${project.build.outputDirectory}/drop-database.sql</srcFile>
+                                    </srcFiles>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>drop_roles</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <onError>continue</onError>
+                                    <srcFiles>
+                                        <srcFile>${project.build.outputDirectory}/drop-roles.sql</srcFile>
+                                        <srcFile>${project.build.outputDirectory}/drop-liquibase.sql</srcFile>
+                                    </srcFiles>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
