--- a/create-database/pom.xml
+++ b/create-database/pom.xml
@@ -45,6 +45,10 @@
                                             <value>${db.database}</value>
                                         </property>
                                         <property>
+                                            <name>create.db.role</name>
+                                            <value>${db.login}</value>
+                                        </property>
+                                        <property>
                                             <name>create.db.password</name>
                                             <value>${db.password}</value>
                                         </property>
