Add support for JSON attribute values.
Fuck yea.  Take advantage of the JSONB datatype that postgres has to
offer to add this as a valid attribute value type for Ultrastructure
attribue values.  Behold the power of the Psuedo Scientist.

--- a/browser/src/test/resources/demo.yml
+++ b/browser/src/test/resources/demo.yml
@@ -7,6 +7,7 @@ jpa:
         javax.persistence.jdbc.url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
         javax.persistence.jdbc.driver: org.postgresql.Driver
         hibernate.cache.use_second_level_cache: true
+        hibernate.dialect: com.chiralbehaviors.CoRE.attribute.json.JsonPostgreSqlDialect
         
 logging:
     level: INFO
