--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -3,3 +3,4 @@ javax.persistence.jdbc.password=${db.password}
 javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
 hibernate.hbm2ddl.auto=validate
+hibernate.dialect=com.chiralbehaviors.CoRE.attribute.json.JsonPostgreSqlDialect
