--- a/phantasm-at-rest/src/test/resources/oauth.yml
+++ b/phantasm-at-rest/src/test/resources/oauth.yml
@@ -3,11 +3,11 @@ randomPort: true
 useOauth: true
 
 logging:
-    level: INFO
+    level: ERROR
     loggers:
         "org.hibernate": ERROR
         "org.glassfish": ERROR
 
-#server: 
-#  requestLog:
-#    appenders: [] #turns off request logging
+server: 
+  requestLog:
+    appenders: [] #turns off request logging
