Add clear and bootstrap commands to handi navi.
Add dropwizard commands so that we can easily bootstrap and clear the
Ultrastructure CoRE database instance.  Remove obselete kernel-phantasms
module.  Consolidate browser module back into phantasm-at-rest.

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>metrics-healthchecks</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-servlets</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.jsonld-java</groupId>
             <artifactId>jsonld-java</artifactId>
             <scope>test</scope>
@@ -91,6 +95,10 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-client</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>loader</artifactId>
         </dependency>
     </dependencies>
     <build>
