Add assets served from file system.

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -100,6 +100,10 @@
             <groupId>com.chiralbehaviors.CoRE</groupId>
             <artifactId>loader</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.dirkraft.dropwizard</groupId>
+            <artifactId>dropwizard-file-assets</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
