--- a/pom.xml
+++ b/pom.xml
@@ -454,6 +454,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>com.github.dirkraft.dropwizard</groupId>
+                <artifactId>dropwizard-file-assets</artifactId>
+                <version>0.0.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
