--- a/phantasm-at-rest/src/test/resources/demo.yml
+++ b/phantasm-at-rest/src/test/resources/demo.yml
@@ -5,10 +5,10 @@ jpa:
         javax.persistence.jdbc.user: ${db.login}
         javax.persistence.jdbc.password: ${db.password}
         javax.persistence.jdbc.url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
-        javax.persistence.jdbc.driver: org.postgresql.Driver
         
 logging:
     level: INFO
     loggers:
         "org.hibernate": ERROR
         "org.glassfish": ERROR
+        graphql: WARN
