--- a/phantasm-at-rest/src/test/resources/test.yml
+++ b/phantasm-at-rest/src/test/resources/test.yml
@@ -7,6 +7,7 @@ logging:
     loggers:
         "org.hibernate": ERROR
         "org.glassfish": ERROR
+        graphql: WARN
 
 server: 
   requestLog:
