Refactor Phantasm.java generation to phantasm-plugin module.
Move Phatasm.java generation out of animations.  This allows me to
generate the kernel phantasms, rather than maintaining them by hand.  It
also pulls out out a decent number of classes that really are dedicated
to running in a maven plugin or some other tooling.

This moved some core Phantasm.java interfaces and such into model, which
was also nice and tidy.  Any* facets no longer implement ScopedPhantasm,
because of this.  Since these are always in the kernel workspace, I
think this is not a bad tradeoff, given that I can now generate the
kernel phantasms.  The workspace dsl definition had already diverged
from my hand maintained kernel phantasms.  This plugs that hole solid
and cleans things up.

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -91,6 +91,39 @@
                             </resources>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/phantasm</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.chiralbehaviors.CoRE</groupId>
+                <artifactId>phantasm-plugin</artifactId>
+                <version>${project.version}</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <generator>
+                                <resource>${basedir}/src/main/resources/kernel.2.wsp</resource>
+                                <outputDirectory>${project.build.directory}/generated-sources/phantasm</outputDirectory>
+                                <packageName>com.chiralbehaviors.CoRE.kernel.phantasm</packageName>
+                                <appendTypeToPackage>true</appendTypeToPackage>
+                            </generator>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
@@ -111,6 +144,35 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>com.chiralbehaviors.CoRE</groupId>
+                                        <artifactId>phantasm-plugin</artifactId>
+                                        <versionRange>[${project.version},)</versionRange>
+                                        <goals>
+                                            <goal>generate</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <profiles>
         <profile>
